--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "bot.js",
   "dependencies": {
-    "discord.js": "^11.5.1"
+    "axios": "^0.19.2",
+    "discord.js": "^11.6.4",
+    "jsdom": "^16.3.0"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
